Fix typo in get_started notebook

--- a/examples/get_started.ipynb
+++ b/examples/get_started.ipynb
@@ -471,7 +471,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from lightonml.simulated_device import SimulatedDevice\n",
+    "from lightonml.internal.simulated_device import SimulatedOpuDevice\n",
     "\n",
     "sim_device = SimulatedOpuDevice()\n",
     "opu = OPU(n_components=1000, max_n_features=1000, opu_device=sim_device)"
