--- a/examples/api-docs/kernels_and_random_features.ipynb
+++ b/examples/api-docs/kernels_and_random_features.ipynb
@@ -298,33 +298,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from lightonml.encoding.base import BinaryThresholdEncoder"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Encoder threshold:  25\n"
-     ]
-    }
-   ],
-   "source": [
-    "encoder = BinaryThresholdEncoder()\n",
-    "print('Encoder threshold: ', encoder.threshold_enc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from lightonml.encoding.base import BinaryThresholdEncoder\n",
+    "encoder = BinaryThresholdEncoder(threshold_enc=25)\n",
     "X_train_encoded = encoder.transform(X_train)\n",
     "X_test_encoded = encoder.transform(X_test)"
    ]
@@ -484,7 +459,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
