--- a/examples/api-docs/randomized_svd.ipynb
+++ b/examples/api-docs/randomized_svd.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Dimensionality reduction\n",
+    "# Recommender system using Randomized SVD\n",
     "\n",
     "Movielens-20m is a dataset consisting in 20 million ratings and 465,000 tag applications applied to 27.000 movies by 138.000 users. We use the Singular Value Decomposition algorithm to build a recommender system for movies."
    ]
