--- a/examples/get_started.ipynb
+++ b/examples/get_started.ipynb
@@ -12,7 +12,7 @@
     " - [lightonml.projections.sklearn.OPUMap](../lightonml.projections.rst#lightonml.projections.sklearn.OPUMap) with `numpy.ndarray`\n",
     " - [lightonml.projections.torch.OPUMap](../lightonml.projections.rst#lightonml.projections.torch.OPUMap) with `torch.Tensor`\n",
     " \n",
-    "For each of these way there's the possibility to run the OPU in a simulated manner, without access to a real OPU. _Check the last section of this notebook for details_."
+    "For each of these ways there's the possibility to run the OPU in a simulated manner, without access to a real OPU. _Check the last section of this notebook for details_."
    ]
   },
   {
@@ -462,35 +462,20 @@
     "\n",
     "A real OPU doesn't these limitations because of the analogic nature of the transform matrix, it takes no compute memory at all.\n",
     "\n",
-    "For the `OPU` class, instantiate it with the following code:"
+    "For the `OPU` and `OPUMap` classes, instantiate it with the following code:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
-    "from lightonml.internal.simulated_device import SimulatedOpuDevice\n",
-    "\n",
-    "sim_device = SimulatedOpuDevice()\n",
-    "opu = OPU(n_components=1000, max_n_features=1000, opu_device=sim_device)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For the OPUMap classes, use the following code:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "opumap = OPUMap(n_components=1000, max_n_features=1000, simulated=True)"
+    "opu = OPU(n_components=1000, max_n_features=1000, simulated=True)"
    ]
   }
  ],
